--- a/index.html
+++ b/index.html
@@ -22,18 +22,30 @@
           <input type="text" id="first_name" name="first_name"/>
         </li>
 	    <li>
-	      <label for="email_address">Email Address:</label>
-          <input type="email" id="email_address" name="email_address"/>
+	      <label for="last_name">Last Name:</label>
+          <input type="text" id="last_name" name="last_name"/>
         </li>
 	    <li>
-		  <label for="phone_number">Phone Number:</label>
-		  <input type="tel" id = "phone_number" name="phone_number"/>
-	    </li>
+	      <label for="username">Username:</label>
+          <input type="text" id="username" name="username"/>
+        </li>
 	    <li>
-	      <label for="date_of_birth">Date of Birth:</label>
-		  <input type="date" id="date_of_birth" name="date_of_birth"/>
-	    </li>
-	  
+	      <label for="phone_number">Phone Number:</label>
+          <input type="tel" id="phone_number" name="phone_number"/>
+        </li>
+	    <li>
+	      <label for="prefer_comm">Preferred way to communicate (chat or voice):</label>
+          <input type="text" id="prefer_comm" name="prefer_comm"/>
+        </li>
+	    <li>
+	      <label for="region">Region:</label>
+          <input type="text" id="region" name="region"/>
+        </li>
+	    <li>
+	      <label for="game_genre">Favorite genres of games:</label>
+          <input type="text" id="game_genre" name="game_genre"/>
+        </li>		
+
 	    <!-- I am creating the submit button -->
 	    <li class = "button">
 	     <button type = "submit">Submit</button>
