--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang = "en" class = "nojs">
+<html lang = "en">
   <head>
     <title>ITMD-362-Project 1, Sean Reimer</title>
-    <meta charset = "utf-8" />
+    <meta charset = "utf-8"/>
     <meta name = "viewport" content = "width=device-width,initial-scale=1.0,shrink-to-fit=no" />
     <link rel = "stylesheet" media = "screen" href = "css/meyersreset-and-normalize-form.css" />
     <link rel = "stylesheet" media = "screen" href = "css/screen.css" />
-	<!-- attach javascript file here -->
+	
+	<!-- Connecting to JavaScript file -->
+    <script src = "jQuery.js"></script>
   </head>
 
   <body>
@@ -19,7 +21,7 @@
 		   <!-- preferred way of communication, region, preferred genres of games -->
 	    <li>
 	      <label for="first_name">First Name:</label>
-          <input type="text" id="first_name" name="first_name"/>
+          <input type="text" id="first_name" name="first_name" placeholder="First Name"/>
         </li>
 	    <li>
 	      <label for="last_name">Last Name:</label>
