--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
         </li>
 	    <li>
 	      <label for="last_name">Last Name:</label>
-          <input type="text" id="last_name" name="last_name"/>
+          <input type="text" id="last_name" name="last_name" placeholder="Last Name"/>
         </li>
 	    <li>
 	      <label for="username">Username:</label>
-          <input type="text" id="username" name="username"/>
+          <input type="text" id="username" name="username" placeholder="Username#0000"/>
         </li>
 	    <li>
 	      <label for="phone_number">Phone Number:</label>
-          <input type="tel" id="phone_number" name="phone_number"/>
+          <input type="tel" id="phone_number" name="phone_number" placeholder="Phone Number"/>
         </li>
 	    <li>
 	      <label for="prefer_comm">Preferred way to communicate (chat or voice):</label>
-          <input type="text" id="prefer_comm" name="prefer_comm"/>
+          <input type="text" id="prefer_comm" name="prefer_comm" placeholder="Chat or Voice"/>
         </li>
 	    <li>
 	      <label for="region">Region:</label>
-          <input type="text" id="region" name="region"/>
+          <input type="text" id="region" name="region" placeholder="Region"/>
         </li>
 	    <li>
 	      <label for="game_genre">Favorite genres of games:</label>
-          <input type="text" id="game_genre" name="game_genre"/>
+          <input type="text" id="game_genre" name="game_genre" placeholder="Game Genre"/>
         </li>		
 
 	    <!-- I am creating the submit button -->
