--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   </head>
 
   <body>
+    <!-- Creating header for my form -->
+	<h1>Weebs...Unite Discord Server Sign-up</h1>
+  
     <!-- I am creating my HTML input form for folks who want to sign up to my discord server -->
     <form action = "/ITMD-362-Project1-form-page" method = "post" autocomplete = "on">
 	
@@ -50,7 +53,7 @@
 
 	    <!-- I am creating the submit button -->
 	    <li class = "button">
-	     <button type = "submit">Submit</button>
+	     <button type="button" id="submit">Submit</button
         </li>
 	  </ul>
     </form>
