--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
           <input type="text" id="game_genre" name="game_genre" placeholder="Game Genre"/>
         </li>		
 
-	    <!-- I am creating the submit button -->
+	    <!-- I am creating the submit button and the display user button-->
 	    <li class = "button">
-	     <button type="button" id="submit">Submit</button
+	     <button type="button" id="submit">Submit</button>
+		 <button type="button" id="display_user">Display User</button>
         </li>
 	  </ul>
     </form>
