--- a/index.html
+++ b/index.html
@@ -3,23 +3,27 @@
   <head>
     <title>ITMD-362-Project 1, Sean Reimer</title>
     <meta charset = "utf-8"/>
-    <meta name = "viewport" content = "width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-    <link rel = "stylesheet" media = "screen" href = "css/meyersreset-and-normalize-form.css" />
-    <link rel = "stylesheet" media = "screen" href = "css/screen.css" />
+    <meta name = "viewport" content = "width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
+    <link rel = "stylesheet" media = "screen" href = "css/meyersreset-and-normalize-form.css"/>
+    <link rel = "stylesheet" media = "screen" href = "css/screen.css"/>
 	
 	<!-- Connecting to JavaScript file -->
     <script src = "jQuery.js"></script>
+	
+	<!-- JQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
+  
+  <!-- Creating header for my form -->
+  <h1>Weebs...Unite Discord Server Sign-up</h1>
 
   <body>
-    <!-- Creating header for my form -->
-	<h1>Weebs...Unite Discord Server Sign-up</h1>
-  
     <!-- I am creating my HTML input form for folks who want to sign up to my discord server -->
-    <form action = "/ITMD-362-Project1-form-page" method = "post" autocomplete = "on">
+    <form method = "post" autocomplete = "on">
 	
 	<!-- Creating my introduction paragraph -->
 	<p>Hello!  This form is to sign up for my gaming discord server, Weebs...Unite!  Please fill out the following info to register for my server</p>
+	
       <ul> <!-- HTML input for first name, last name, username, cell number -->
 		   <!-- preferred way of communication, region, preferred genres of games -->
 	    <li>
