--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang = "en">
   <head>
     <title>ITMD-362-Project 1, Sean Reimer</title>
-    <meta charset = "utf-8"/>
-    <meta name = "viewport" content = "width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
-    <link rel = "stylesheet" media = "screen" href = "css/meyersreset-and-normalize-form.css"/>
-    <link rel = "stylesheet" media = "screen" href = "css/screen.css"/>
+    <meta charset='utf-8'/>
+    <meta name="viewport" content = "width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
+    <link rel="stylesheet" media = "screen" href = "css/meyersreset-and-normalize-form.css"/>
+    <link rel="stylesheet" media = "screen" href = "css/screen.css"/>
 	
 	<!-- Connecting to JavaScript file -->
-    <script src = "jQuery.js"></script>
+    <script async src="jQuery.js"></script>
 	
 	<!-- JQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
-  
-  <!-- Creating header for my form -->
-  <h1>Weebs...Unite Discord Server Sign-up</h1>
 
   <body>
+    <!-- Creating header for my form -->
+    <h1>Weebs...Unite Discord Server Sign-up</h1>
+  
     <!-- I am creating my HTML input form for folks who want to sign up to my discord server -->
     <form method = "post" autocomplete = "on">
 	
