--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <!-- Creating header for my form -->
-    <h1>Weebs...Unite Discord Server Sign-up</h1>
+    <h1>Weebs...Unite! Discord Server Sign-up</h1>
   
     <!-- I am creating my HTML input form for folks who want to sign up to my discord server -->
     <form method = "post" autocomplete = "on">
