added form and css modifications
added action="#null" in the form and playing with css for media screens

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1>Weebs...Unite! Discord Server Sign-up</h1>
   
     <!-- I am creating my HTML input form for folks who want to sign up to my discord server -->
-    <form method = "post" autocomplete = "on">
+    <form method = "post" autocomplete = "on" action = "#null">
 	
 	<!-- Creating my introduction paragraph -->
 	<p>Hello!  This form is to sign up for my gaming discord server, Weebs...Unite!  Please fill out the following info to register for my server</p>
