--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content = "width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
     <link rel="stylesheet" media = "screen" href = "css/meyersreset-and-normalize-form.css"/>
     <link rel="stylesheet" media = "screen" href = "css/screen.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Piazzolla:ital,wght@1,100&display=swap" rel="stylesheet">  
 	<!-- Connecting to JavaScript file -->
     <script async src="jQuery.js"></script>
 	<!-- JQuery library -->
